# discord-rich-presence-plex

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: release.yml
plexrichpresence/: __init__.py
plexrichpresence/config/: constants.py
plexrichpresence/core/: config.py  discord.py  imgur.py  plex.py
plexrichpresence/models/: discord.py
plexrichpresence/utils/: cache.py  logging.py
